feat: adding laoding timeout and animation for popover button

--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,8 @@
   --color-Gray6: #f2f2f2;
   --color-Gray7: #bdbdbd;
   --color-Blue1: #2f80ed;
+  --color-Purple1: #8785ff;
+  --color-Orange1: #f8b76b;
 
   --font-lato: 'Lato', sans-serif;
 
