--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,16 @@
   --color-Gray1: #333333;
   --color-Gray2: #4f4f4f;
   --color-Gray3: #828282;
+  --color-Gray4: #bdbdbd;
+  --color-Gray5: #e0e0e0;
   --color-Gray6: #f2f2f2;
   --color-Gray7: #bdbdbd;
+  --color-Gray8: #eedcff;
   --color-Blue1: #2f80ed;
   --color-Purple1: #8785ff;
+  --color-Purple2: #9b51e0;
   --color-Orange1: #f8b76b;
+  --color-Red1: #eb5757;
 
   --font-lato: 'Lato', sans-serif;
 
