--- a/src/index.css
+++ b/src/index.css
@@ -12,10 +12,15 @@
   --color-Gray6: #f2f2f2;
   --color-Gray7: #bdbdbd;
   --color-Gray8: #eedcff;
+  --color-Gray9: #f8f8f8;
   --color-Blue1: #2f80ed;
+  --color-Blue2: #43b78d;
+  --color-Blue3: #d2f2ea;
   --color-Purple1: #8785ff;
   --color-Purple2: #9b51e0;
   --color-Orange1: #f8b76b;
+  --color-Orange2: #fceed3;
+  --color-Orange3: #e5a443;
   --color-Red1: #eb5757;
 
   --font-lato: 'Lato', sans-serif;
